--- a/client/Kanji-React-Frontend/src/Components/Navbar/Navbar.module.css
+++ b/client/Kanji-React-Frontend/src/Components/Navbar/Navbar.module.css
@@ -13,3 +13,23 @@
     justify-content: space-evenly;
     align-items: center;
 }
+.Links{
+    transition: 0.2s;
+    font-size: 1.1rem;
+}
+.Links:hover, .Links:visited:hover{
+    color: var(--accent);
+}
+.Links:visited{
+    color: inherit;
+}
+.LinkButton{
+    border: none;
+    background-color: var(--lightMode);
+    font-size: 1.1rem;
+    transition: 0.2s;
+}
+.LinkButton:hover{
+    cursor: pointer;
+    color: var(--accent);
+}
