--- a/client/Kanji-React-Frontend/src/Components/KanjiDisplayer/KanjiDisplayer.module.css
+++ b/client/Kanji-React-Frontend/src/Components/KanjiDisplayer/KanjiDisplayer.module.css
@@ -3,6 +3,7 @@
     padding: 2rem 5rem;
     text-align: center;
     border-radius: 1rem;
+    max-width: 400px;
 }
 .Kanji{
     font-size: 12rem;
