--- a/client/Kanji-React-Frontend/src/index.css
+++ b/client/Kanji-React-Frontend/src/index.css
@@ -30,8 +30,6 @@ body a{
   color: var(--darkMode);
   background-color: var(--lightMode);
   border: none;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
   text-align: center;
   transition: ease-in-out 150ms;
 }
@@ -40,8 +38,17 @@ body a{
   color: var(--lightMode);
   cursor: pointer;
 }
+.large{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.small{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
 .incorrect{
-    display: none;
+    background-color: var(--accent);
+    color: var(--lightMode);
 }
 .correct, .correct:hover{
     background-color: var(--darkMode);
