working on implementing phrases

--- a/client/Kanji-React-Frontend/src/pages/Profile/Profile.module.css
+++ b/client/Kanji-React-Frontend/src/pages/Profile/Profile.module.css
@@ -15,6 +15,7 @@
     border: 0.2rem solid var(--darkMode);
     display: flex;
     align-items: start;
+    padding:0 0.75rem;
     justify-content: center;
 }
 .currentprogress{
