--- a/client/Kanji-React-Frontend/src/Components/Checkbox/Checkbox.module.css
+++ b/client/Kanji-React-Frontend/src/Components/Checkbox/Checkbox.module.css
@@ -1,18 +1,21 @@
 .CheckContainer{
-    width: 15vw;
-    height: 4vw;
+    width: 10vw;
+    height: 3vw;
     position: relative;
-    border: 4px solid var(--darkMode);
+    border: 2px solid var(--darkMode);
 }
 
 .CheckLabel{
     width: 40%;
-    height: 2.5vw;
+    height: 2vw;
     position: absolute;
     left: 5%;
     top: 15%;
     background-color: var(--darkMode);
     transition: 150ms ease-in-out;
+}
+.CheckLabel:hover{
+    background-color: var(--accent);
 }
 .CheckLabel:has(.Checkbox:checked){
     left: 55%;
