--- a/client/Kanji-React-Frontend/src/pages/Profile/Profile.module.css
+++ b/client/Kanji-React-Frontend/src/pages/Profile/Profile.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 80vh;
+    max-width: 25rem;
     justify-content: space-evenly;
 }
 .Main div{
